springbotMongodb.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: springappdeployment
  namespace: newns
spec:
  replicas: 2
  selector:
    matchLabels:
     app: springapp
  template:
    metadata:
      name: springapp
      labels:
        app: springapp
    spec:
      containers:
      - name: springapp
        image: raja9658/spring-boot-mongo:1 
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
        resources:
         requests:
           memory: 256Mi
           cpu: 400m
         limits:
           memory: 512Mi
           cpu: 500m 
---
apiVersion: v1
kind: Service
metadata:
  name: myspringservice
  namespace: newns  
spec:
  type: LoadBalancer
  selector:
     app: springapp
  ports:
  - port: 80
    targetPort: 8080


---
apiVersion: v1
kind: Service
metadata:
  name: mongosvc
  namespace: newns                             
spec:
 type: ClusterIP
 selector:
   app: mongo
 ports:
 - port: 27017
   targetPort: 27017
